--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,5 @@
 ---
-layout: default
-title: Gallery 
+title: Gallery
 overview: Gallery
 ---
 
@@ -10,13 +9,13 @@ overview: Gallery
 <h2>Gallery</h2>
 <p>Here are some examples of what is possible with developer around APIs and data. This gallery is not limited to web and mobile applications, but also contain visualizations, spreadsheet integrations and much more.</p>
 
-<!-- Begin List Code Samples--->
+<!-- Begin List Code Samples -->
 {% raw  %}
-<script id="galleryListingTemplate" type="text/template">    
-    <tr>   
+<script id="galleryListingTemplate" type="text/template">
+    <tr>
         <td width="25%" align="center">
            <img src="{{Screenshot}}" width="150" align="center" style="padding: 15px;" />
-        </td>           
+        </td>
         <td width="75%">
            <table cellpadding="3" width="100%">
                <tr>
@@ -32,14 +31,14 @@ overview: Gallery
                     <td>{{Description}}</td>
                </tr>
            </table>
-        </td>          
-    </tr>                                                                                             
+        </td>
+    </tr>
 </script>
 {% endraw %}
 
 <div style="">
      <table id="galleryListing" border="0" width="90%" align="left" cellpadding="5" cellspacing="5"></table>
-</div>  
+</div>
 
 <script type="text/javascript">
 function listGallery()
@@ -49,10 +48,10 @@ function listGallery()
          $.each(data['Gallery'], function(key, val) {
             var template = $('#galleryListingTemplate').html();
             var html = Mustache.to_html(template, val);
-            $('#galleryListing').append(html);                          
+            $('#galleryListing').append(html);
             });
         });
-    } 
-listGallery();    
+    }
+listGallery();
 </script>
-<!-- End List Code Simples--->
+<!-- End List Code Simples -->
